--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ui",
     "accordion"
   ],
-  "version": "0.1.6",
+  "version": "0.1.7",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -20,10 +20,8 @@
     "type": "git",
     "url": "git+https://github.com/Marko-DT/react-accordion.git"
   },
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0"
+  "peerDependencies": {
+    "react": ">=16"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,8 +48,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.7",
-    "@babel/preset-env": "^7.16.11"
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6"
   }
 }
